# vlm_control_system

./: .gitignore  README.md  benchmark.py  evaluate.py  main.py  pipeline.py  pyproject.toml  start_server.py
src/: camera.py  detector.py  llama_launcher.py  metrics.py  prompts.py  rkllm_server.py  vlm_client.py
