[project]
name = "repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.13.0.92",
    "requests>=2.34.2",
    "ultralytics>=8.4.71",
    "pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
